@@ -9,5 +9,6 @@ upload_max_filesize = 512M
 post_max_size = 512M
 html_errors = off
 include_path = ".:/etc/inc:/usr/local/www"
+sendmail_path = "/usr/local/bin/msmtp -t"
 session.gc_maxlifetime = 1440
 session.save_path = /tmp
